// Vitest Snapshot v1

exports[`tags > {@bold bold string!} matches snapshot 1`] = `
<div>
  <b>
    bold string!
  </b>
</div>
`;

exports[`tags > {@code code string!} matches snapshot 1`] = `
<div>
  <code>
    code string!
  </code>
</div>
`;

exports[`tags > {@color test|f00} matches snapshot 1`] = `
<div>
  <span
    style="color: rgb(255, 0, 0);"
  >
    test
  </span>
</div>
`;

exports[`tags > {@color test|fff|bonus-pipe} matches snapshot 1`] = `
<div>
  <span
    style="color: rgb(255, 255, 255);"
  >
    test
  </span>
</div>
`;

exports[`tags > {@color test|ffffff} matches snapshot 1`] = `
<div>
  <span
    style="color: rgb(255, 255, 255);"
  >
    test
  </span>
</div>
`;

exports[`tags > {@color test|illegal-color} matches snapshot 1`] = `
<div>
  <span
    style=""
  >
    test
  </span>
</div>
`;

exports[`tags > {@d20 d20 string!} matches snapshot 1`] = `
<div>
  <code>
    d20
    d20 string!
  </code>
</div>
`;

exports[`tags > {@damage damage string!} matches snapshot 1`] = `
<div>
  <code>
    damage string!
  </code>
</div>
`;

exports[`tags > {@dice dice string!} matches snapshot 1`] = `
<div>
  <code>
    dice string!
  </code>
</div>
`;

exports[`tags > {@filter Bard cantrips and first-level spells|spells|level=0;1|class=bard} matches snapshot 1`] = `
<div>
  Bard cantrips and first-level spells
</div>
`;

exports[`tags > {@filter Races that have a bonus to Intelligence|races|Ability Bonus (Including Subrace)=Intelligence +any} matches snapshot 1`] = `
<div>
  Races that have a bonus to Intelligence
</div>
`;

exports[`tags > {@hit hit string!} matches snapshot 1`] = `
<div>
  <code>
    d20
    hit string!
  </code>
</div>
`;

exports[`tags > {@italic italic string!} matches snapshot 1`] = `
<div>
  <i>
    italic string!
  </i>
</div>
`;

exports[`tags > {@link example|https://example.com} matches snapshot 1`] = `
<div>
  <a
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    example
  </a>
</div>
`;

exports[`tags > {@link example} matches snapshot 1`] = `
<div>
  <a
    href="example"
    rel="noopener noreferrer"
    target="_blank"
  >
    example
  </a>
</div>
`;

exports[`tags > {@link https://example.com} matches snapshot 1`] = `
<div>
  <a
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://example.com
  </a>
</div>
`;

exports[`tags > {@note note string!} matches snapshot 1`] = `
<div>
  <i
    class="note"
  >
    note string!
  </i>
</div>
`;

exports[`tags > {@scaledice 2d6;3d6|2-9|1d6} matches snapshot 1`] = `
<div>
  <code>
    1d6
  </code>
</div>
`;

exports[`tags > {@spell name of spell|XGE|displayed text} matches snapshot 1`] = `
<div>
  <a
    href="/view/spell_XGE-Name-of-Spell"
  >
    displayed text
  </a>
</div>
`;

exports[`tags > {@spell name of spell|XGE} matches snapshot 1`] = `
<div>
  <a
    href="/view/spell_XGE-Name-of-Spell"
  >
    name of spell
  </a>
</div>
`;

exports[`tags > {@spell name of spell} matches snapshot 1`] = `
<div>
  <a
    href="/view/spell_PHB-Name-of-Spell"
  >
    name of spell
  </a>
</div>
`;

exports[`tags > {@strike strike string!} matches snapshot 1`] = `
<div>
  <s>
    strike string!
  </s>
</div>
`;

exports[`tags > {@underline underline string!} matches snapshot 1`] = `
<div>
  <span
    class="underline"
  >
    underline string!
  </span>
</div>
`;
